--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -21,6 +21,31 @@ http {
 	# Docker DNS Resolver
 	resolver 127.0.0.11 valid=30s;
 
+	# =====================================================
+	# Cloudflare IP detection
+	# =====================================================
+	geo $is_cloudflare {
+
+		default 0;
+
+		# Cloudflare IPv4 ranges
+		173.245.48.0/20;
+		103.21.244.0/22;
+		103.22.200.0/22;
+		103.31.4.0/22;
+		141.101.64.0/18;
+		108.162.192.0/18;
+		190.93.240.0/20;
+		188.114.96.0/20;
+		197.234.240.0/22;
+		198.41.128.0/17;
+		162.158.0.0/15;
+		104.16.0.0/13;
+		104.24.0.0/14;
+		172.64.0.0/13;
+		131.0.72.0/22;
+	}
+
 	# --- HTTP REDIRECT ---
 	server {
 
@@ -49,6 +74,11 @@ http {
 		listen 443 ssl;
 		http2 on;
 		server_name octanebrew.dev www.octanebrew.dev;
+
+		if ($is_cloudflare = 0) {
+
+			return 444;
+		}
 
 		location / {
 
@@ -109,6 +139,11 @@ http {
 		http2 on;
 		server_name grafana.octanebrew.dev;
 
+		if ($is_cloudflare = 0) {
+
+			return 444;
+		}
+
 		location / {
 
 			set $upstream_grafana grafana;
@@ -124,6 +159,11 @@ http {
 		listen 443 ssl;
 		http2 on;
 		server_name kibana.octanebrew.dev;
+
+		if ($is_cloudflare = 0) {
+
+			return 444;
+		}
 
 		location / {
 
@@ -141,6 +181,11 @@ http {
 		http2 on;
 		server_name kafka.octanebrew.dev;
 
+		if ($is_cloudflare = 0) {
+
+			return 444;
+		}
+
 		location / {
 
 			set $upstream_kafka_ui kafka-ui;
@@ -156,6 +201,11 @@ http {
 		listen 443 ssl;
 		http2 on;
 		server_name dozzle.octanebrew.dev;
+
+		if ($is_cloudflare = 0) {
+
+			return 444;
+		}
 
 		location / {
 
@@ -175,6 +225,11 @@ http {
 		http2 on;
 		server_name elastic.octanebrew.dev;
 
+		if ($is_cloudflare = 0) {
+
+			return 444;
+		}
+
 		location / {
 
 			set $upstream_elastic elasticsearch;
@@ -191,8 +246,10 @@ http {
 		http2 on;
 		server_name stats.octanebrew.dev;
 
-		# ssl_certificate /etc/letsencrypt/live/octanebrew.dev/fullchain.pem; # OLD
-		# ssl_certificate_key /etc/letsencrypt/live/octanebrew.dev/privkey.pem; # OLD
+		if ($is_cloudflare = 0) {
+
+			return 444;
+		}
 
 		location / {
 
@@ -219,6 +276,11 @@ http {
 
 		listen 443 ssl;
 		server_name openstream.octanebrew.dev;
+
+		if ($is_cloudflare = 0) {
+
+			return 444;
+		}
 
 		location / {
 
@@ -280,16 +342,23 @@ http {
 	}
 	# --- 9. OBJECT STORAGE (MinIO) ---
 	server {
+
 		listen 443 ssl;
 		http2 on;
 		server_name storage.octanebrew.dev;
 
+		if ($is_cloudflare = 0) {
+
+			return 444;
+		}
+
 		client_max_body_size 100M;
 
 		location / {
+
 			set $upstream_minio minio;
 			proxy_pass http://$upstream_minio:9000;
-			
+
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
