--- a/.gitignore
+++ b/.gitignore
@@ -124,6 +124,7 @@ dist
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
+.DS_Store
 
 # yarn v3
 .pnp.*
@@ -137,3 +138,9 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Agent files
+.agent/
+
+# Test files
+prd*
