feat(streaming): add rtmp ingest engine and stats

--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -104,4 +104,30 @@ http {
 			proxy_set_header Host $host;
 		}
 	}
+
+	# --- 7. RTMP STATS ---
+	server {
+
+		listen 443 ssl;
+		http2 on;
+		server_name stats.octanebrew.dev;
+
+		ssl_certificate /etc/letsencrypt/live/octanebrew.dev/fullchain.pem;
+		ssl_certificate_key /etc/letsencrypt/live/octanebrew.dev/privkey.pem;
+
+		location / {
+
+			set $upstream_stats live-ingest;
+			proxy_pass http://$upstream_stats:8082/stat;
+
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+		}
+
+		location /stat.xsl {
+
+			set $upstream_stats live-ingest;
+			proxy_pass http://$upstream_stats:8082/stat.xsl;
+		}
+	}
 }
