feat(messaging): add kafka, connect, and ui

--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -87,6 +87,22 @@ http {
 		}
 	}
 
+	# --- 4. KAFKA UI ---
+	server {
+
+		listen 443 ssl;
+		http2 on;
+		server_name kafka.octanebrew.dev;
+
+		location / {
+
+			set $upstream_kafka_ui kafka-ui;
+			proxy_pass http://$upstream_kafka_ui:8080;
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+		}
+	}
+
     # --- 5. DOZZLE (Container Logs) ---
 	server {
 
