feat(data): add persistent storage (mongo, elastic, minio)

--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -121,6 +121,22 @@ http {
 		}
 	}
 
+	# --- 6. ELASTICSEARCH API ---
+	server {
+
+		listen 443 ssl;
+		http2 on;
+		server_name elastic.octanebrew.dev;
+
+		location / {
+
+			set $upstream_elastic elasticsearch;
+			proxy_pass http://$upstream_elastic:9200;
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+		}
+	}
+
 	# --- 7. RTMP STATS ---
 	server {
 
