feat(ops): add observability stack and finalize landing page

--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -50,7 +50,7 @@ http {
 		server_name octanebrew.dev www.octanebrew.dev;
 
 		location / {
-			root /var/www/html;
+			root /var/www/html
 			index index.html;
 		}
 
@@ -87,6 +87,38 @@ http {
 		}
 	}
 
+	# --- 2. GRAFANA ---
+	server {
+
+		listen 443 ssl;
+		http2 on;
+		server_name grafana.octanebrew.dev;
+
+		location / {
+
+			set $upstream_grafana grafana;
+			proxy_pass http://$upstream_grafana:3000;
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+		}
+	}
+
+	# --- 3. KIBANA ---
+	server {
+
+		listen 443 ssl;
+		http2 on;
+		server_name kibana.octanebrew.dev;
+
+		location / {
+
+			set $upstream_kibana kibana;
+			proxy_pass http://$upstream_kibana:5601;
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+		}
+	}
+
 	# --- 4. KAFKA UI ---
 	server {
 
@@ -103,7 +135,7 @@ http {
 		}
 	}
 
-    # --- 5. DOZZLE (Container Logs) ---
+	# --- 5. DOZZLE (Container Logs) ---
 	server {
 
 		listen 443 ssl;
