--- a/shared/docker-compose.yml
+++ b/shared/docker-compose.yml
@@ -16,8 +16,10 @@ services:
     networks:
       - octane-net
     depends_on:
-      - dozzle
+      - grafana
+      - kibana
       - kafka-ui
+      - dozzle
     deploy:
       resources:
         limits:
@@ -183,12 +185,118 @@ services:
     networks:
       - octane-net
 
+  # --- OBSERVABILITY ---
+  kibana:
+    image: docker.elastic.co/kibana/kibana:${ELASTIC_VERSION}
+    container_name: kibana
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+      - ELASTICSEARCH_USERNAME=kibana_system
+      - ELASTICSEARCH_PASSWORD=${ELASTIC_PASSWORD}
+      - SERVER_PUBLICBASEURL=https://kibana.octanebrew.dev
+      - SERVER_HOST=0.0.0.0
+    depends_on:
+      - elasticsearch
+    networks:
+      - octane-net
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    restart: always
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD}
+      - GF_SERVER_DOMAIN=grafana.octanebrew.dev
+      - GF_SERVER_ROOT_URL=https://grafana.octanebrew.dev
+      - GF_SERVER_SERVE_FROM_SUB_PATH=false
+    volumes:
+      - ${GRAFANA_DATA_DIR}:/var/lib/grafana
+    depends_on:
+      - prometheus
+    networks:
+      - octane-net
+
   dozzle:
-    image: amir20/dozzle:latest
+    image: amir20/dozzle:latestwa
     container_name: dozzle
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     restart: always
+    networks:
+      - octane-net
+
+  # --- DATA EXPORTERS ---
+  node-exporter:
+    image: prom/node-exporter:latest
+    container_name: node-exporter
+    restart: always
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+    command:
+      - '--path.procfs=/host/proc'
+      - '--path.sysfs=/host/sys'
+      - '--collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc)($$|/)'
+    networks:
+      - octane-net
+
+  mongodb-exporter:
+    image: percona/mongodb_exporter:0.47.2
+    container_name: mongodb-exporter
+    environment:
+      - MONGODB_URI=mongodb://${MONGO_USER}:${MONGO_PASS}@mongodb:27017/admin?authSource=admin
+    command: ['--collect-all', '--compatible-mode']
+    depends_on: [mongodb]
+    networks:
+      - octane-net
+
+  kafka-exporter:
+    image: danielqsj/kafka-exporter:latest
+    container_name: kafka-exporter
+    command: ["--kafka.server=kafka:9092", "--kafka.version=3.7.0"]
+    depends_on: [kafka]
+    networks:
+      - octane-net
+
+  elasticsearch-exporter:
+    image: prometheuscommunity/elasticsearch-exporter:latest
+    container_name: elasticsearch-exporter
+    command:
+      - '--es.uri=${ES_EXPORTER_URI}'
+      - '--es.all'
+      - '--es.indices'
+      - '--es.ssl-skip-verify'
+    depends_on: [elasticsearch]
+    networks:
+      - octane-net
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    restart: always
+    volumes:
+      - ${PROMETHEUS_CONFIG_DIR}:/etc/prometheus
+      - ${PROMETHEUS_DATA_DIR}:/prometheus
+    command: ['--config.file=/etc/prometheus/prometheus.yml']
+    depends_on:
+      - node-exporter
+      - mongodb-exporter
+      - kafka-exporter
+      - elasticsearch-exporter
+    networks:
+      - octane-net
+
+  cadvisor:
+    image: gcr.io/cadvisor/cadvisor:latest
+    container_name: cadvisor
+    restart: always
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:ro
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+      - /dev/disk/:/dev/disk:ro
     networks:
       - octane-net
 
