fix(gateway): add missing semicolon in nginx.conf

--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -50,7 +50,7 @@ http {
 		server_name octanebrew.dev www.octanebrew.dev;
 
 		location / {
-			root /var/www/html
+			root /var/www/html;
 			index index.html;
 		}
 
