feat(ops): integrate openstream backend and apply temp ssl fix

--- a/services/rtmp.conf
+++ b/services/rtmp.conf
@@ -13,6 +13,21 @@ rtmp {
             live on;
             interleave on;
             wait_key on;
+            
+            # --- RECORDING ---
+            record all;
+            record_path /minio_data/recordings; 
+            record_unique on;
+            record_suffix .flv;
+
+            # --- WEBHOOKS ---
+            # AUTHENTICATION HOOK: Nginx sends stream key. 200 OK = Allow.
+            on_publish http://openstream-api:3000/api/streams/on_publish;
+
+            # PROCESSING HOOK: Nginx sends filename when recording stops.
+            on_record_done http://openstream-api:3000/api/streams/on_record_done;
+
+            # --- HLS ---
             hls on;
             hls_path /minio_data/live;
             hls_fragment 2s;
