--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -37,8 +37,12 @@ http {
 	}
 
 	# --- SHARED SSL SETTINGS ---
-	ssl_certificate /etc/letsencrypt/live/octanebrew.dev/fullchain.pem;
-	ssl_certificate_key /etc/letsencrypt/live/octanebrew.dev/privkey.pem;
+	# ssl_certificate /etc/letsencrypt/live/octanebrew.dev/fullchain.pem; # OLD
+	# ssl_certificate_key /etc/letsencrypt/live/octanebrew.dev/privkey.pem; # OLD
+	
+	# TEMP: Certbot copy issue fix
+	ssl_certificate /etc/letsencrypt/archive/octanebrew.dev/fullchain2.pem;
+	ssl_certificate_key /etc/letsencrypt/archive/octanebrew.dev/privkey2.pem;
 	ssl_protocols TLSv1.2 TLSv1.3;
 	ssl_session_cache shared:SSL:10m;
 
@@ -84,6 +88,24 @@ http {
 				expires 1y;
 				add_header Cache-Control "public";
 			}
+		}
+
+		# --- API & BACKEND ---
+		location /api/ {
+			# 'openstream-api' is the container name of the NestJS backend
+			proxy_pass http://openstream-api:3000/;
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header X-Forwarded-Proto $scheme;
+		}
+
+		location /socket.io/ {
+			proxy_pass http://openstream-api:3000/socket.io/;
+			proxy_http_version 1.1;
+			proxy_set_header Upgrade $http_upgrade;
+			proxy_set_header Connection "upgrade";
+			proxy_set_header Host $host;
 		}
 	}
 
@@ -176,8 +198,12 @@ http {
 		http2 on;
 		server_name stats.octanebrew.dev;
 
-		ssl_certificate /etc/letsencrypt/live/octanebrew.dev/fullchain.pem;
-		ssl_certificate_key /etc/letsencrypt/live/octanebrew.dev/privkey.pem;
+		# ssl_certificate /etc/letsencrypt/live/octanebrew.dev/fullchain.pem; # OLD
+		# ssl_certificate_key /etc/letsencrypt/live/octanebrew.dev/privkey.pem; # OLD
+
+		# TEMP: Certbot copy issue fix
+		ssl_certificate /etc/letsencrypt/archive/octanebrew.dev/fullchain2.pem;
+		ssl_certificate_key /etc/letsencrypt/archive/octanebrew.dev/privkey2.pem;
 
 		location / {
 
