fix(gateway): use variables for backend upstream to prevent startup failure

--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -93,7 +93,8 @@ http {
 		# --- API & BACKEND ---
 		location /api/ {
 			# 'openstream-api' is the container name of the NestJS backend
-			proxy_pass http://openstream-api:3000/;
+			set $upstream_backend openstream-api;
+			proxy_pass http://$upstream_backend:3000/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -101,10 +102,11 @@ http {
 		}
 
 		location /socket.io/ {
-			proxy_pass http://openstream-api:3000/socket.io/;
+			set $upstream_backend openstream-api;
+			proxy_pass http://$upstream_backend:3000/socket.io/;
 			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
-			proxy_set_header Connection "upgrade";
+			proxy_set_header Connection $connection_upgrade;
 			proxy_set_header Host $host;
 		}
 	}
