--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - ./nginx-gateway/certbot/conf:/etc/letsencrypt:ro
     networks:
       - octane-net
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     depends_on:
       - grafana
       - kibana
@@ -47,6 +49,8 @@ services:
       - ./services/stat.xsl:/usr/share/nginx/html/stat.xsl:ro
     networks:
       - octane-net
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     deploy:
       resources:
         limits:
