--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -93,8 +93,12 @@ http {
 		# --- API & BACKEND ---
 		location /api/ {
 			# 'openstream-api' is the container name of the NestJS backend
-			set $upstream_backend openstream-api;
-			proxy_pass http://$upstream_backend:3000/;
+			# set $upstream_backend openstream-api; # ORIGINAL
+			# proxy_pass http://$upstream_backend:3000/; # ORIGINAL
+			
+			# TEMP: SSH Tunnel to local backend
+			set $upstream_backend host.docker.internal;
+			proxy_pass http://$upstream_backend:9900/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -102,8 +106,12 @@ http {
 		}
 
 		location /socket.io/ {
-			set $upstream_backend openstream-api;
-			proxy_pass http://$upstream_backend:3000/socket.io/;
+			# set $upstream_backend openstream-api; # ORIGINAL
+			# proxy_pass http://$upstream_backend:3000/socket.io/; # ORIGINAL
+
+			# TEMP: SSH Tunnel to local backend
+			set $upstream_backend host.docker.internal;
+			proxy_pass http://$upstream_backend:9900/socket.io/;
 			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
 			proxy_set_header Connection $connection_upgrade;
