fix(ops): replaced docker with internal ip for testing

--- a/services/rtmp.conf
+++ b/services/rtmp.conf
@@ -23,11 +23,11 @@ rtmp {
             # --- WEBHOOKS ---
             # AUTHENTICATION HOOK: Nginx sends stream key. 200 OK = Allow.
             # on_publish http://openstream-api:3000/api/streams/on_publish; # ORIGINAL
-            on_publish http://host.docker.internal:9900/api/streams/on_publish;
+            on_publish http://172.17.0.1:9900/api/streams/on_publish;
 
             # PROCESSING HOOK: Nginx sends filename when recording stops.
             # on_record_done http://openstream-api:3000/api/streams/on_record_done; # ORIGINAL
-            on_record_done http://host.docker.internal:9900/api/streams/on_record_done;
+            on_record_done http://172.17.0.1:9900/api/streams/on_record_done;
 
             # --- HLS ---
             hls on;
