--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -97,7 +97,7 @@ http {
 			# proxy_pass http://$upstream_backend:3000/; # ORIGINAL
 			
 			# TEMP: SSH Tunnel to local backend
-			proxy_pass http://172.17.0.1:9900/;
+			proxy_pass http://host.openstream.internal:9901/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -109,7 +109,7 @@ http {
 			# proxy_pass http://$upstream_backend:3000/socket.io/; # ORIGINAL
 
 			# TEMP: SSH Tunnel to local backend
-			proxy_pass http://172.17.0.1:9900/socket.io/;
+			proxy_pass http://host.openstream.internal:9901/socket.io/;
 			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
 			proxy_set_header Connection $connection_upgrade;
