feat(ui): implement CRT monitor UI with standby overlay and enhance RTMP stats page styling and information display

--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -227,5 +227,9 @@ http {
 			set $upstream_stats live-ingest;
 			proxy_pass http://$upstream_stats:8082/stat.xsl;
 		}
+
+		location /style.css {
+			root /var/www/html;
+		}
 	}
 }
