--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -93,11 +93,10 @@ http {
 		# --- API & BACKEND ---
 		location /api/ {
 			# 'openstream-api' is the container name of the NestJS backend
-			# set $upstream_backend openstream-api; # ORIGINAL
-			# proxy_pass http://$upstream_backend:3000/; # ORIGINAL
+			set $upstream_backend openstream-api;
+			proxy_pass http://$upstream_backend:3000/;
+			# proxy_pass http://host.openstream.internal:9901/; # LOCAL DEV
 			
-			# TEMP: SSH Tunnel to local backend
-			proxy_pass http://host.openstream.internal:9901/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -105,11 +104,10 @@ http {
 		}
 
 		location /socket.io/ {
-			# set $upstream_backend openstream-api; # ORIGINAL
-			# proxy_pass http://$upstream_backend:3000/socket.io/; # ORIGINAL
+			set $upstream_backend openstream-api;
+			proxy_pass http://$upstream_backend:3000/socket.io/;
+			# proxy_pass http://host.openstream.internal:9901/socket.io/; # LOCAL DEV
 
-			# TEMP: SSH Tunnel to local backend
-			proxy_pass http://host.openstream.internal:9901/socket.io/;
 			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
 			proxy_set_header Connection $connection_upgrade;
