--- a/services/rtmp.conf
+++ b/services/rtmp.conf
@@ -22,12 +22,12 @@ rtmp {
 
             # --- WEBHOOKS ---
             # AUTHENTICATION HOOK: Nginx sends stream key. 200 OK = Allow.
-            # on_publish http://openstream-api:3000/api/streams/on_publish; # ORIGINAL
-            on_publish http://host.openstream.internal:9901/api/streams/on_publish;
+            on_publish http://openstream-api:3000/api/streams/on_publish;
+            # on_publish http://host.openstream.internal:9901/api/streams/on_publish; # LOCAL DEV
 
             # PROCESSING HOOK: Nginx sends filename when recording stops.
-            # on_record_done http://openstream-api:3000/api/streams/on_record_done; # ORIGINAL
-            on_record_done http://host.openstream.internal:9901/api/streams/on_record_done;
+            on_record_done http://openstream-api:3000/api/streams/on_record_done;
+            # on_record_done http://host.openstream.internal:9901/api/streams/on_record_done; # LOCAL DEV
 
             # --- HLS ---
             hls on;
