chore: add `openstream-api` host-gateway mapping in docker compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       - octane-net
     # extra_hosts:
     #   - "host.openstream.internal:host-gateway" # LOCAL DEV
+    extra_hosts:
+      - "openstream-api:host-gateway"
     depends_on:
       - grafana
       - kibana
@@ -49,8 +51,8 @@ services:
       - ./services/stat.xsl:/usr/share/nginx/html/stat.xsl:ro
     networks:
       - octane-net
-    # extra_hosts:
-    #   - "host.openstream.internal:host-gateway" # LOCAL DEV
+    extra_hosts:
+      - "openstream-api:host-gateway" # Map hostname to Host IP
     deploy:
       resources:
         limits:
