--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -90,29 +90,6 @@ http {
 			}
 		}
 
-		# --- API & BACKEND ---
-		location /api/ {
-			# 'openstream-api' is the container name of the NestJS backend
-			set $upstream_backend openstream-api;
-			proxy_pass http://$upstream_backend:3000/;
-			# proxy_pass http://host.openstream.internal:9901/; # LOCAL DEV
-			
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-			proxy_set_header X-Forwarded-Proto $scheme;
-		}
-
-		location /socket.io/ {
-			set $upstream_backend openstream-api;
-			proxy_pass http://$upstream_backend:3000/socket.io/;
-			# proxy_pass http://host.openstream.internal:9901/socket.io/; # LOCAL DEV
-
-			proxy_http_version 1.1;
-			proxy_set_header Upgrade $http_upgrade;
-			proxy_set_header Connection $connection_upgrade;
-			proxy_set_header Host $host;
-		}
 	}
 
 	# --- 2. GRAFANA ---
@@ -207,9 +184,6 @@ http {
 		# ssl_certificate /etc/letsencrypt/live/octanebrew.dev/fullchain.pem; # OLD
 		# ssl_certificate_key /etc/letsencrypt/live/octanebrew.dev/privkey.pem; # OLD
 
-		# TEMP: Certbot copy issue fix
-		ssl_certificate /etc/letsencrypt/archive/octanebrew.dev/fullchain2.pem;
-		ssl_certificate_key /etc/letsencrypt/archive/octanebrew.dev/privkey2.pem;
 
 		location / {
 
@@ -228,6 +202,54 @@ http {
 
 		location /style.css {
 			root /var/www/html;
+		}
+	}
+	# --- 8. OPENSTREAM PLATFORM ---
+	server {
+		listen 443 ssl;
+		server_name openstream.octanebrew.dev;
+
+		location / {
+			set $upstream_frontend openstream-web;
+			proxy_pass http://$upstream_frontend:3000;
+			
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header X-Forwarded-Proto $scheme;
+		}
+
+		location /api/ {
+			set $upstream_backend openstream-api;
+			proxy_pass http://$upstream_backend:4000/;
+			# proxy_pass http://host.openstream.internal:9901/; # LOCAL DEV
+			
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header X-Forwarded-Proto $scheme;
+		}
+
+		location /socket.io/ {
+			set $upstream_backend openstream-api;
+			proxy_pass http://$upstream_backend:4000/socket.io/;
+			# proxy_pass http://host.openstream.internal:9901/socket.io/; # LOCAL DEV
+
+			proxy_http_version 1.1;
+			proxy_set_header Upgrade $http_upgrade;
+			proxy_set_header Connection $connection_upgrade;
+			proxy_set_header Host $host;
+		}
+
+		location /ingest {
+			set $upstream_backend openstream-api;
+			proxy_pass http://$upstream_backend:4000/ingest;
+			# proxy_pass http://host.openstream.internal:9901/ingest; # LOCAL DEV
+			
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header X-Forwarded-Proto $scheme;
 		}
 	}
 }
