chore: Configure WebSocket cross-origin headers and update ingest proxy for HTTP/1.1 with extended timeouts.

--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -39,7 +39,7 @@ http {
 	# --- SHARED SSL SETTINGS ---
 	# ssl_certificate /etc/letsencrypt/live/octanebrew.dev/fullchain.pem; # OLD
 	# ssl_certificate_key /etc/letsencrypt/live/octanebrew.dev/privkey.pem; # OLD
-	
+
 	# TEMP: Certbot copy issue fix
 	ssl_certificate /etc/letsencrypt/archive/octanebrew.dev/fullchain2.pem;
 	ssl_certificate_key /etc/letsencrypt/archive/octanebrew.dev/privkey2.pem;
@@ -54,6 +54,7 @@ http {
 		server_name octanebrew.dev www.octanebrew.dev;
 
 		location / {
+
 			root /var/www/html;
 			index index.html;
 		}
@@ -81,10 +82,12 @@ http {
 			}
 
 			location ~* \.(m3u8)$ {
+
 				expires -1;
 			}
 
 			location ~* \.(ts)$ {
+
 				expires 1y;
 				add_header Cache-Control "public";
 			}
@@ -184,7 +187,6 @@ http {
 		# ssl_certificate /etc/letsencrypt/live/octanebrew.dev/fullchain.pem; # OLD
 		# ssl_certificate_key /etc/letsencrypt/live/octanebrew.dev/privkey.pem; # OLD
 
-
 		location / {
 
 			set $upstream_stats live-ingest;
@@ -201,18 +203,21 @@ http {
 		}
 
 		location /style.css {
+
 			root /var/www/html;
 		}
 	}
 	# --- 8. OPENSTREAM PLATFORM ---
 	server {
+
 		listen 443 ssl;
 		server_name openstream.octanebrew.dev;
 
 		location / {
+
 			set $upstream_frontend openstream-web;
 			proxy_pass http://$upstream_frontend:3000;
-			
+
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -220,10 +225,11 @@ http {
 		}
 
 		location /api/ {
+
 			set $upstream_backend openstream-api;
-			proxy_pass http://$upstream_backend:4000/;
+			proxy_pass http://$upstream_backend:4000;
 			# proxy_pass http://host.openstream.internal:9901/; # LOCAL DEV
-			
+
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -231,6 +237,7 @@ http {
 		}
 
 		location /socket.io/ {
+
 			set $upstream_backend openstream-api;
 			proxy_pass http://$upstream_backend:4000/socket.io/;
 			# proxy_pass http://host.openstream.internal:9901/socket.io/; # LOCAL DEV
@@ -239,17 +246,29 @@ http {
 			proxy_set_header Upgrade $http_upgrade;
 			proxy_set_header Connection $connection_upgrade;
 			proxy_set_header Host $host;
+
+			# Allow WebSocket Cross-Origin
+			proxy_set_header Origin "";
+			proxy_set_header X-Forwarded-Host $host;
+			proxy_set_header X-Forwarded-Proto $scheme;
 		}
 
 		location /ingest {
+
 			set $upstream_backend openstream-api;
-			proxy_pass http://$upstream_backend:4000/ingest;
-			# proxy_pass http://host.openstream.internal:9901/ingest; # LOCAL DEV
-			
+
+			proxy_pass http://$upstream_backend:4000;
+			# proxy_pass http://host.openstream.internal:4000/; # LOCAL DEV
+
+			proxy_http_version 1.1;
+			proxy_set_header Upgrade $http_upgrade;
+			proxy_set_header Connection "upgrade";
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header X-Forwarded-Proto $scheme;
+			proxy_read_timeout 86400s;
+			proxy_send_timeout 86400s;
 		}
 	}
 }
