--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -84,12 +84,22 @@ http {
 			location ~* \.(m3u8)$ {
 
 				expires -1;
+				# CORS headers for HLS manifest
+				add_header 'Access-Control-Allow-Origin' '*' always;
+				add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+				add_header 'Access-Control-Allow-Headers' 'Range, Origin, Content-Type' always;
+				add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
 			}
 
 			location ~* \.(ts)$ {
 
 				expires 1y;
 				add_header Cache-Control "public";
+				# CORS headers for HLS segments
+				add_header 'Access-Control-Allow-Origin' '*' always;
+				add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+				add_header 'Access-Control-Allow-Headers' 'Range, Origin, Content-Type' always;
+				add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
 			}
 		}
 
