--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -281,4 +281,27 @@ http {
 			proxy_send_timeout 86400s;
 		}
 	}
+	# --- 9. OBJECT STORAGE (MinIO) ---
+	server {
+		listen 443 ssl;
+		http2 on;
+		server_name storage.octanebrew.dev;
+
+		client_max_body_size 100M;
+
+		location / {
+			set $upstream_minio minio;
+			proxy_pass http://$upstream_minio:9000;
+			
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header X-Forwarded-Proto $scheme;
+
+			proxy_connect_timeout 300;
+			proxy_http_version 1.1;
+			proxy_set_header Connection "";
+			chunked_transfer_encoding off;
+		}
+	}
 }
