feat: Integrate certbot-dns-spaceship plugin

--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -37,12 +37,9 @@ http {
 	}
 
 	# --- SHARED SSL SETTINGS ---
-	# ssl_certificate /etc/letsencrypt/live/octanebrew.dev/fullchain.pem; # OLD
-	# ssl_certificate_key /etc/letsencrypt/live/octanebrew.dev/privkey.pem; # OLD
 
-	# TEMP: Certbot copy issue fix
-	ssl_certificate /etc/letsencrypt/archive/octanebrew.dev/fullchain2.pem;
-	ssl_certificate_key /etc/letsencrypt/archive/octanebrew.dev/privkey2.pem;
+	ssl_certificate /etc/letsencrypt/live/octanebrew.dev/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/octanebrew.dev/privkey.pem;
 	ssl_protocols TLSv1.2 TLSv1.3;
 	ssl_session_cache shared:SSL:10m;
 
