--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,11 +32,14 @@ services:
           memory: 4G
 
   certbot:
-    image: certbot/certbot:latest
+    build:
+      context: ./nginx-gateway/certbot
+      dockerfile: Dockerfile
     container_name: certbot
     volumes:
       - ./nginx-gateway/certbot/www:/var/www/certbot:rw
       - ./nginx-gateway/certbot/conf:/etc/letsencrypt:rw
+      - ./spaceship.ini:/secrets/spaceship.ini:ro
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
   # --- STREAMING ENGINE ---
