Ops: Orchestrate new services and implement Dozzle authentication

--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,17 @@ GRAFANA_ADMIN_PASSWORD=password
 PROMETHEUS_CONFIG_DIR=/mnt/data/prometheus/config
 PROMETHEUS_DATA_DIR=/mnt/data/prometheus/data
 GRAFANA_DATA_DIR=/mnt/data/grafana/data
+
+# --- REDIS ---
+REDIS_PASSWORD=password
+REDIS_DATA_DIR=/mnt/data/redis/data
+
+# --- POSTGRES ---
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+POSTGRES_DB=octanebrew-platform
+POSTGRES_DATA_DIR=/mnt/data/postgres/data
+
+# --- DOZZLE ---
+DOZZLE_USERNAME=user
+DOZZLE_PASSWORD=password
