Fix: Restore misplaced service configurations and Dozzle auth

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -245,6 +245,10 @@ services:
     container_name: dozzle
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./dozzle/users.yml:/data/users.yml:ro
+    environment:
+      - DOZZLE_AUTH_PROVIDER=simple
+      - DOZZLE_LEVEL=info
     restart: always
     networks:
       - octane-net
@@ -337,6 +341,82 @@ services:
       STORAGE_PUBLIC_HOST: ${STORAGE_PUBLIC_HOST}
     depends_on:
       - minio
+    networks:
+      - octane-net
+
+  # --- OCTANEBREW EXTENSIONS ---
+  clickhouse:
+    image: clickhouse/clickhouse-server
+    container_name: clickhouse
+    volumes:
+      - ./data/clickhouse:/var/lib/clickhouse
+    ports:
+      - "8123:8123"
+      - "9004:9000"
+    networks:
+      - octane-net
+    ulimits:
+      nofile:
+        soft: 262144
+        hard: 262144
+
+  redis:
+    image: redis:7-alpine
+    container_name: redis
+    command: redis-server --requirepass ${REDIS_PASSWORD} --appendonly yes
+    ports:
+      - "6379:6379"
+    volumes:
+      - ${REDIS_DATA_DIR}:/data
+    networks:
+      - octane-net
+    healthcheck:
+      test: ["CMD-SHELL", "redis-cli -a ${REDIS_PASSWORD} ping | grep PONG"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: 1G
+
+  postgres:
+    image: postgres:16-alpine
+    container_name: postgres
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    volumes:
+      - ${POSTGRES_DATA_DIR}:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    networks:
+      - octane-net
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: 2G
+
+  dictionary-service:
+    build:
+      context: ./services/dictionary-service
+      dockerfile: Dockerfile
+    container_name: dictionary-service
+    ports:
+      - "8000:8000"
+    environment:
+      - REDIS_URL=redis://:${REDIS_PASSWORD}@redis:6379
+      - SERVICE_API_KEY=${SERVICE_API_KEY}
+    depends_on:
+      - redis
     networks:
       - octane-net
 
