feat(ops): integrate conduit web and backend services in nginx

--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -340,7 +340,56 @@ http {
 			proxy_send_timeout 86400s;
 		}
 	}
-	# --- 9. OBJECT STORAGE (MinIO) ---
+
+	# --- 9. CONDUIT WEB ---
+	server {
+
+		listen 443 ssl;
+		http2 on;
+		server_name conduit.octanebrew.dev;
+
+		if ($is_cloudflare = 0) {
+
+			return 444;
+		}
+
+		location / {
+
+			set $upstream_conduit_web conduit-web;
+			proxy_pass http://$upstream_conduit_web:3001;
+
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header X-Forwarded-Proto $scheme;
+		}
+	}
+
+	# --- 10. CONDUIT API ---
+	server {
+
+		listen 443 ssl;
+		http2 on;
+		server_name api.conduit.octanebrew.dev;
+
+		if ($is_cloudflare = 0) {
+
+			return 444;
+		}
+
+		location / {
+
+			set $upstream_conduit_api conduit-api;
+			proxy_pass http://$upstream_conduit_api:4001;
+
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header X-Forwarded-Proto $scheme;
+		}
+	}
+
+	# --- 11. OBJECT STORAGE (MinIO) ---
 	server {
 
 		listen 443 ssl;
