fix(ops): updated conduit-backend hostname

--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -370,7 +370,7 @@ http {
 
 		listen 443 ssl;
 		http2 on;
-		server_name api.conduit.octanebrew.dev;
+		server_name conduit-api.octanebrew.dev;
 
 		if ($is_cloudflare = 0) {
 
