--- a/services/dictionary-service/pyproject.toml
+++ b/services/dictionary-service/pyproject.toml
@@ -6,24 +6,27 @@ readme = "README.md"
 authors = [
     { name = "shubh305", email = "shubham.305singh@gmail.com" }
 ]
-requires-python = ">=3.13"
+requires-python = ">=3.12"
 dependencies = [
-    "fastapi>=0.115.0",
-    "uvicorn>=0.30.0",
-    "spacy>=3.7.0",
-    "textblob>=0.18.0",
-    "inflect>=7.0.0",
-    "language-tool-python>=2.7.1",
-    "googletrans-py>=4.0.0rc1",
-    "pydantic-settings>=2.4.0",
-    "prometheus-fastapi-instrumentator>=7.0.0",
-    "opentelemetry-api>=1.26.0",
-    "opentelemetry-sdk>=1.26.0",
-    "opentelemetry-instrumentation-fastapi>=0.47b0",
-    "redis>=5.0.0",
+    "fastapi",
+    "uvicorn",
+    "redis",
+    "pydantic-settings",
+    "spacy",
+    "textblob",
+    "inflect",
+    "language-tool-python",
+    "googletrans==4.0.0-rc1",
+    "langdetect",
     "fastapi-limiter==0.1.6",
+    "prometheus-fastapi-instrumentator",
+    "opentelemetry-api",
+    "opentelemetry-sdk",
+    "opentelemetry-instrumentation-fastapi",
+    "jamdict",
+    "jamdict-data",
+    "jaconv",
     "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
-    "langdetect>=1.0.9",
 ]
 
 [project.scripts]
