--- a/services/dictionary-service/pyproject.toml
+++ b/services/dictionary-service/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 authors = [
     { name = "shubh305", email = "shubham.305singh@gmail.com" }
 ]
-requires-python = ">=3.12"
+requires-python = ">=3.12,<3.13"
 dependencies = [
     "fastapi",
     "uvicorn",
