--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -305,21 +305,23 @@ http {
 			proxy_set_header X-Forwarded-Proto $scheme;
 		}
 
-		location /socket.io/ {
+
+		location /ws/ {
 
 			set $upstream_backend openstream-api;
-			proxy_pass http://$upstream_backend:4000/socket.io/;
-			# proxy_pass http://host.openstream.internal:9901/socket.io/; # LOCAL DEV
+			proxy_pass http://$upstream_backend:4000/ws/;
 
 			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
 			proxy_set_header Connection $connection_upgrade;
 			proxy_set_header Host $host;
-
-			# Allow WebSocket Cross-Origin
-			proxy_set_header Origin "";
-			proxy_set_header X-Forwarded-Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header X-Forwarded-Proto $scheme;
+
+			# Timeouts for persistent chat connections
+			proxy_read_timeout 86400s;
+			proxy_send_timeout 86400s;
 		}
 
 		location /ingest {
@@ -346,7 +348,7 @@ http {
 
 		listen 443 ssl;
 		http2 on;
-		server_name conduit.octanebrew.dev;
+		server_name conduit.octanebrew.dev *.octanebrew.dev;
 
 		if ($is_cloudflare = 0) {
 
