fix: websocket proxy in nginx config

--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -282,6 +282,8 @@ http {
 			return 444;
 		}
 
+
+
 		location / {
 
 			set $upstream_frontend openstream-web;
@@ -309,7 +311,7 @@ http {
 		location /ws/ {
 
 			set $upstream_backend openstream-api;
-			proxy_pass http://$upstream_backend:4000/ws/;
+			proxy_pass http://$upstream_backend:4000;
 
 			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
